# kalxulus

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/old_workflows/: generate-docs.yml
.github/workflows/: docs-build-and-publish.yml  lint-and-test.yml
benchmarking/: benchmark.py  kalx_test.py  old_error.py
docs/api/: kalxulus.md
src/kalxulus/: __init__.py  kalxulus.py
tests/: kalx_test.py  test_kalxulus.py
