# toml
[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "kalixo-kalxulus"
description = "High-precision derivatives and integrals for discrete datasets."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [
    { name = "Alex Buettner", email = "alex.buettner93@gmail.com" },
    { name = "Kevin Schmidt", email = "schmidt.kevin.m@gmail.com" }
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = ["numpy>=1.22", "scipy>=1.9"]
[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "mkdocs-include-markdown-plugin"
]


[project.urls]
Homepage = "https://github.com/kalixo-labs/kalixotools"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/kalxulus/_version.py"
template = """
# Generated by hatch-vcs
__version__ = "{version}"
"""

[tool.hatch.build]
# Include only needed files
include = [
    "src/kalxulus/**",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/kalxulus"]
# Explicitly include the version file
artifacts = ["src/kalxulus/_version.py"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "tests", "docs"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

